syntax = "proto3";

package pb;

option go_package = "github.com/the-medo/talebound-backend/pb";

message VerifyEmailRequest {
  int64 emailId = 1;
  string secretCode = 2;
}

message VerifyEmailResponse {
  bool isVerified = 1;
}